# fenominal

./: .gitignore  Cargo.toml  README.md
data/: negex_triggers.tsv
src/: core_document.rs  fenominal.rs  fenominal_traits.rs  lib.rs  mined_term.rs  simple_sentence.rs  simple_token.rs  stopwords.rs  text_util.rs
src/autocomplete/: autocompleter.rs  mod.rs
src/hpo/: clinical_mapper.rs  default_hpo_mapper.rs  fenominal.rs  hpo_concept.rs  hpo_concept_hit.rs  hpo_concept_mapper.rs  hpo_loader.rs  mod.rs  partition.rs  sentence_mapper.rs  simple_hpo_parser.rs  text_to_annotation.rs
src/models/: fenominal_model.rs  mod.rs
src/util/: error.rs  mod.rs  negex.rs  text_util.rs
tests/: autocomplete_test.rs  clinical_texts.rs  integration_positions.rs
tests/common/: mod.rs
