[package]
name = "rfenominal"
version = "0.1.7"
description = "HPO-based text mining. Rust version of fenominal"
edition = "2021"


[[bin]]
name = "fenominal_main"
path = "src/bin/fenominal_main.rs"

[dependencies]
once_cell = "1.21.0"
ontolius = "0.4.2" 
regex = "1.9.6"
clap = { version = "4.5.32", features = ["derive"] }
serde = "1.0.219"
serde_json = "1.0.140"


[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }