[package]
name = "fenominal"
version = "0.1.14"
description = "HPO-based text mining. Rust version of fenominal"
edition = "2021"


[[bin]]
name = "fenominal_main"
path = "src/bin/fenominal_main.rs"
features = ["serde"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
once_cell = "1.21.3"
ontolius = { version = "0.5.3", features = ["csr", "obographs"] }
regex = "1.9.6"
rstest = "0.25.0"
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]


[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1.2"
once_cell = "1.21.3"
rstest = "0.25.0"
