[package]
name = "fenominal"
version = "0.1.18"
description = "HPO-based text mining. Rust version of fenominal"
edition = "2021"


[[bin]]
name = "fenominal_main"
path = "src/bin/fenominal_main.rs"
features = ["serde"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
once_cell = "1.21.3"
ontolius = { version = "0.7.0", features = ["csr", "obographs"] }
regex = "1.12.2"
rstest = "0.26.1"
serde = { version = "1.0.228", optional = true }
serde_json = { version = "1.0.145", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]


[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1.5"
once_cell = "1.21.3"
rstest = "0.26.1"
